--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "quasar dev",
     "build": "quasar build",
     "dist": "awot-static",
-    "gen-icons": "svg-stringify src/assets/icons"
+    "gen-icons": "svg-stringify src/assets/icons",
+    "gen-styled": "svg-stringify src/assets/icons/styled --styles"
   },
   "awot-static": {
     "sources": "./dist/spa/bundled",
@@ -34,7 +35,7 @@
     "html-webpack-inline-source-plugin": "1.0.0-beta.2",
     "inline-source": "^7.2.0",
     "quasar": "^1.0.0",
-    "svg-stringify": "^3.1.2",
+    "svg-stringify": "^3.2.2",
     "vue-apexcharts": "^1.6.0",
     "vue-chartjs": "^3.5.1",
     "vue-i18n": "^8.0.0",
