--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.16",
     "@quasar/extras": "^1.9.19",
+    "@types/ws": "^7.4.1",
     "@vue/composition-api": "^0.6.4",
     "apexcharts": "^3.25.0",
     "awot-scripts": "^3.1.2",
@@ -38,7 +39,9 @@
     "svg-stringify": "^3.2.6",
     "vue-apexcharts": "^1.6.0",
     "vue-chartjs": "^3.5.1",
-    "vue-i18n": "^8.0.0"
+    "vue-i18n": "^8.0.0",
+    "vue-native-websocket": "^2.0.14",
+    "ws": "^7.4.4"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
