--- a/src-capacitor/android/app/src/main/assets/capacitor.config.json
+++ b/src-capacitor/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "org.capacitor.quasar.app",
+  "appId": "com.espoleta.vortex.v1.app",
   "appName": "Quasar App",
   "bundledWebRuntime": false,
   "npmClient": "yarn",
