--- a/src-capacitor/capacitor.config.json
+++ b/src-capacitor/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "org.capacitor.quasar.app",
-  "appName": "Quasar App",
+  "appId": "com.espoleta.vortex.v1.app",
+  "appName": "Vortex Visor",
   "bundledWebRuntime": false,
   "npmClient": "yarn",
   "webDir": "www"
