--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.16",
+    "@capacitor/android": "2.4.7",
+    "@capacitor/core": "^2.0.0",
+    "@capacitor/filesystem": "^1.0.7",
     "@quasar/extras": "^1.9.19",
     "@types/ws": "^7.4.1",
     "@vue/composition-api": "^0.6.4",
