--- a/src-capacitor/android/app/src/main/assets/capacitor.config.json
+++ b/src-capacitor/android/app/src/main/assets/capacitor.config.json
@@ -3,5 +3,8 @@
   "appName": "Quasar App",
   "bundledWebRuntime": false,
   "npmClient": "yarn",
-  "webDir": "www"
+  "webDir": "www",
+  "server": {
+    "url": "http://192.168.0.104:8080"
+  }
 }
